edgevox-onnx/c-api/c-api.h

/**
 * @brief Return the edgevox-onnx version string.
 *
 * The returned pointer refers to statically allocated memory owned by the
 * library. Do not free it and do not modify it.
 *
 * @return Version string, for example `"1.12.1"`.
 *
 * @code
 * printf("edgevox-onnx version: %s\n", EdgevoxOnnxGetVersionStr());
 * @endcode
 */
EDGEVOX_ONNX_API const char *EdgevoxOnnxGetVersionStr();
/**
 * @brief Return the Git SHA1 used to build the library.
 *
 * The returned pointer refers to statically allocated memory owned by the
 * library. Do not free it and do not modify it.
 *
 * @return Short Git SHA1 string, for example `"6982b86c"`.
 */
EDGEVOX_ONNX_API const char *EdgevoxOnnxGetGitSha1();
/**
 * @brief Return the Git build date used to build the library.
 *
 * The returned pointer refers to statically allocated memory owned by the
 * library. Do not free it and do not modify it.
 *
 * @return Build date string, for example `"Fri Jun 20 11:22:52 2025"`.
 */
EDGEVOX_ONNX_API const char *EdgevoxOnnxGetGitDate();
/** @brief Streaming decoding state for one utterance or stream. */
typedef struct EdgevoxOnnxOnlineStream EdgevoxOnnxOnlineStream;
/**
 * @brief Destroy a streaming ASR state object.
 *
 * @param stream A pointer returned by EdgevoxOnnxCreateOnlineStream() or
 *               EdgevoxOnnxCreateOnlineStreamWithHotwords().
 *
 * @code
 * EdgevoxOnnxDestroyOnlineStream(stream);
 * stream = NULL;
 * @endcode
 * @see EdgevoxOnnxCreateOnlineStream
 */
EDGEVOX_ONNX_API void EdgevoxOnnxDestroyOnlineStream(
    const EdgevoxOnnxOnlineStream *stream);
/**
 * @brief Append audio samples to a streaming ASR stream.
 *
 * The input is mono floating-point PCM normalized to the range [-1, 1].
 * If @p sample_rate differs from the recognizer feature sample rate,
 * edgevox-onnx resamples internally.
 *
 * @param stream A pointer returned by EdgevoxOnnxCreateOnlineStream().
 * @param sample_rate Sample rate of @p samples.
 * @param samples Pointer to @p n samples in the range [-1, 1].
 * @param n Number of samples.
 *
 * @code
 * int32_t start = 0;
 * int32_t chunk_size = 3200;  // 0.2 seconds at 16 kHz
 * EdgevoxOnnxOnlineStreamAcceptWaveform(stream, wave->sample_rate,
 *                                      wave->samples + start, chunk_size);
 * @endcode
 * @see EdgevoxOnnxCreateOnlineStream, EdgevoxOnnxDecodeOnlineStream
 */
EDGEVOX_ONNX_API void EdgevoxOnnxOnlineStreamAcceptWaveform(
    const EdgevoxOnnxOnlineStream *stream, int32_t sample_rate,
    const float *samples, int32_t n);
/**
 * @brief Signal end-of-input for a streaming ASR stream.
 *
 * After calling this function, do not append more samples to the stream.
 *
 * @param stream A pointer returned by EdgevoxOnnxCreateOnlineStream().
 *
 * @code
 * EdgevoxOnnxOnlineStreamInputFinished(stream);
 * @endcode
 */
EDGEVOX_ONNX_API void EdgevoxOnnxOnlineStreamInputFinished(
    const EdgevoxOnnxOnlineStream *stream);
/**
 * @brief Set a per-stream runtime option.
 *
 * This is a generic extension point for model-specific or runtime-specific
 * options such as "is_final" for streaming Paraformer.
 *
 * @param stream A pointer returned by EdgevoxOnnxCreateOnlineStream().
 * @param key Option name.
 * @param value Option value represented as text.
 *
 * @code
 * EdgevoxOnnxOnlineStreamSetOption(stream, "is_final", "1");
 * @endcode
 */
EDGEVOX_ONNX_API void EdgevoxOnnxOnlineStreamSetOption(
    const EdgevoxOnnxOnlineStream *stream, const char *key, const char *value);
/** @brief Opaque circular-buffer handle used by helper APIs. */
typedef struct EdgevoxOnnxCircularBuffer EdgevoxOnnxCircularBuffer;
/**
 * @brief Return the number of currently stored samples.
 *
 * @param buffer A pointer returned by EdgevoxOnnxCreateCircularBuffer().
 * @return Number of samples currently in the buffer.
 */
EDGEVOX_ONNX_API int32_t
EdgevoxOnnxCircularBufferSize(const EdgevoxOnnxCircularBuffer *buffer);
/**
 * @brief Return the current head index of the buffer timeline.
 *
 * The value is monotonically non-decreasing until
 * EdgevoxOnnxCircularBufferReset() is called.
 *
 * @param buffer A pointer returned by EdgevoxOnnxCreateCircularBuffer().
 * @return The current head index.
 */
EDGEVOX_ONNX_API int32_t
EdgevoxOnnxCircularBufferHead(const EdgevoxOnnxCircularBuffer *buffer);
/**
 * @brief Clear a circular buffer and reset its head index.
 *
 * @param buffer A pointer returned by EdgevoxOnnxCreateCircularBuffer().
 */
EDGEVOX_ONNX_API void EdgevoxOnnxCircularBufferReset(
    const EdgevoxOnnxCircularBuffer *buffer);
/**
 * @brief Write floating-point PCM to a mono 16-bit WAVE file.
 *
 * @param samples Pointer to @p n samples in the range [-1, 1].
 * @param n Number of samples.
 * @param sample_rate Sample rate in Hz.
 * @param filename Output filename.
 * @return 1 on success; 0 on failure.
 *
 * @code
 * EdgevoxOnnxWriteWave(audio->samples, audio->n, audio->sample_rate,
 *                     "./generated-kokoro-en.wav");
 * @endcode
 * @see EdgevoxOnnxReadWave
 */
EDGEVOX_ONNX_API int32_t EdgevoxOnnxWriteWave(const float *samples, int32_t n,
                                            int32_t sample_rate,
                                            const char *filename);
/**
 * @brief Decoded mono WAVE file content.
 *
 * Free this object with EdgevoxOnnxFreeWave().
 * @see EdgevoxOnnxReadWave, EdgevoxOnnxFreeWave
 */
typedef struct EdgevoxOnnxWave {
  /** Samples normalized to the range [-1, 1]. */
  const float *samples;
  /** Sample rate in Hz. */
  int32_t sample_rate;
  /** Number of samples. */
  int32_t num_samples;
} EdgevoxOnnxWave;
/**
 * @brief Read a mono 16-bit PCM WAVE file.
 *
 * @param filename Input WAVE filename.
 * @return A newly allocated wave object, or NULL on error. Free it with
 *         EdgevoxOnnxFreeWave().
 *
 * @code
 * const EdgevoxOnnxWave *wave = EdgevoxOnnxReadWave("./Obama.wav");
 * if (wave) {
 *   printf("sample_rate=%d, num_samples=%d\n",
 *          wave->sample_rate, wave->num_samples);
 *   EdgevoxOnnxFreeWave(wave);
 * }
 * @endcode
 * @see EdgevoxOnnxFreeWave, EdgevoxOnnxWave
 */
EDGEVOX_ONNX_API const EdgevoxOnnxWave *EdgevoxOnnxReadWave(const char *filename);
/**
 * @brief Destroy a wave object returned by EdgevoxOnnxReadWave() or
 * EdgevoxOnnxReadWaveFromBinaryData().
 * @see EdgevoxOnnxReadWave
 */
EDGEVOX_ONNX_API void EdgevoxOnnxFreeWave(const EdgevoxOnnxWave *wave);
// ============================================================
// For speaker embedding extraction
// ============================================================
/**
 * @brief Configuration for speaker embedding extraction.
 *
 * Example using
 * `3dspeaker_speech_campplus_sv_zh-cn_16k-common.onnx`:
 *
 * @code
 * EdgevoxOnnxSpeakerEmbeddingExtractorConfig config;
 * memset(&config, 0, sizeof(config));
 * config.model = "./3dspeaker_speech_campplus_sv_zh-cn_16k-common.onnx";
 * config.num_threads = 1;
 * config.provider = "cpu";
 * @endcode
 * @see EdgevoxOnnxCreateSpeakerEmbeddingExtractor
 */
typedef struct EdgevoxOnnxSpeakerEmbeddingExtractorConfig {
  /** Speaker embedding model file. */
  const char *model;
  /** Number of inference threads. */
  int32_t num_threads;
  /** Non-zero to print debug information. */
  int32_t debug;
  /** Execution provider such as `"cpu"`. */
  const char *provider;
} EdgevoxOnnxSpeakerEmbeddingExtractorConfig;
/** @brief Opaque speaker embedding extractor handle. */
typedef struct EdgevoxOnnxSpeakerEmbeddingExtractor
    EdgevoxOnnxSpeakerEmbeddingExtractor;
/**
 * @brief Create a speaker embedding extractor.
 *
 * @param config Speaker embedding extractor configuration.
 * @return A newly allocated extractor on success, or NULL on error. Free it
 *         with EdgevoxOnnxDestroySpeakerEmbeddingExtractor().
 * @see EdgevoxOnnxSpeakerEmbeddingExtractorConfig, EdgevoxOnnxDestroySpeakerEmbeddingExtractor
 */
EDGEVOX_ONNX_API const EdgevoxOnnxSpeakerEmbeddingExtractor *
EdgevoxOnnxCreateSpeakerEmbeddingExtractor(
    const EdgevoxOnnxSpeakerEmbeddingExtractorConfig *config);
/**
 * @brief Destroy a speaker embedding extractor.
 *
 * @param p A pointer returned by EdgevoxOnnxCreateSpeakerEmbeddingExtractor().
 * @see EdgevoxOnnxCreateSpeakerEmbeddingExtractor
 */
EDGEVOX_ONNX_API void EdgevoxOnnxDestroySpeakerEmbeddingExtractor(
    const EdgevoxOnnxSpeakerEmbeddingExtractor *p);
/**
 * @brief Return the embedding dimension produced by the extractor.
 *
 * @param p A pointer returned by EdgevoxOnnxCreateSpeakerEmbeddingExtractor().
 * @return Embedding dimension.
 */
EDGEVOX_ONNX_API int32_t EdgevoxOnnxSpeakerEmbeddingExtractorDim(
    const EdgevoxOnnxSpeakerEmbeddingExtractor *p);
/**
 * @brief Create a streaming feature buffer for embedding extraction.
 *
 * Feed samples with EdgevoxOnnxOnlineStreamAcceptWaveform(), then call
 * EdgevoxOnnxSpeakerEmbeddingExtractorIsReady() and
 * EdgevoxOnnxSpeakerEmbeddingExtractorComputeEmbedding().
 *
 * @param p A pointer returned by EdgevoxOnnxCreateSpeakerEmbeddingExtractor().
 * @return A newly allocated online stream. Free it with
 *         EdgevoxOnnxDestroyOnlineStream().
 */
EDGEVOX_ONNX_API const EdgevoxOnnxOnlineStream *
EdgevoxOnnxSpeakerEmbeddingExtractorCreateStream(
    const EdgevoxOnnxSpeakerEmbeddingExtractor *p);
/**
 * @brief Check whether enough audio has been provided to compute an embedding.
 *
 * @param p A pointer returned by EdgevoxOnnxCreateSpeakerEmbeddingExtractor().
 * @param s A pointer returned by
 * EdgevoxOnnxSpeakerEmbeddingExtractorCreateStream().
 * @return 1 if the stream is ready; otherwise 0.
 */
EDGEVOX_ONNX_API int32_t EdgevoxOnnxSpeakerEmbeddingExtractorIsReady(
    const EdgevoxOnnxSpeakerEmbeddingExtractor *p,
    const EdgevoxOnnxOnlineStream *s);
/**
 * @brief Compute the embedding for a stream.
 *
 * The returned vector has `EdgevoxOnnxSpeakerEmbeddingExtractorDim(p)` elements.
 * Free it with EdgevoxOnnxSpeakerEmbeddingExtractorDestroyEmbedding().
 *
 * @param p A pointer returned by EdgevoxOnnxCreateSpeakerEmbeddingExtractor().
 * @param s A pointer returned by
 * EdgevoxOnnxSpeakerEmbeddingExtractorCreateStream().
 * @return A newly allocated embedding vector.
 *
 * @code
 * const EdgevoxOnnxOnlineStream *stream =
 *     EdgevoxOnnxSpeakerEmbeddingExtractorCreateStream(ex);
 * EdgevoxOnnxOnlineStreamAcceptWaveform(stream, wave->sample_rate,
 * wave->samples, wave->num_samples);
 * EdgevoxOnnxOnlineStreamInputFinished(stream);
 * if (EdgevoxOnnxSpeakerEmbeddingExtractorIsReady(ex, stream)) {
 *   const float *v =
 *       EdgevoxOnnxSpeakerEmbeddingExtractorComputeEmbedding(ex, stream);
 *   EdgevoxOnnxSpeakerEmbeddingExtractorDestroyEmbedding(v);
 * }
 * EdgevoxOnnxDestroyOnlineStream(stream);
 * @endcode
 */
EDGEVOX_ONNX_API const float *
EdgevoxOnnxSpeakerEmbeddingExtractorComputeEmbedding(
    const EdgevoxOnnxSpeakerEmbeddingExtractor *p,
    const EdgevoxOnnxOnlineStream *s);
/**
 * @brief Destroy an embedding vector returned by
 * EdgevoxOnnxSpeakerEmbeddingExtractorComputeEmbedding().
 *
 * @param v A pointer returned by
 *          EdgevoxOnnxSpeakerEmbeddingExtractorComputeEmbedding().
 */
EDGEVOX_ONNX_API void EdgevoxOnnxSpeakerEmbeddingExtractorDestroyEmbedding(
    const float *v);
/**
 * @brief Opaque speaker embedding manager handle.
 *
 * @see EdgevoxOnnxCreateSpeakerEmbeddingManager
 */
typedef struct EdgevoxOnnxSpeakerEmbeddingManager
    EdgevoxOnnxSpeakerEmbeddingManager;
/**
 * @brief Create a speaker embedding manager.
 *
 * The manager stores enrolled speaker embeddings and supports speaker search
 * and verification.
 *
 * @param dim Embedding dimension. This should match
 *            EdgevoxOnnxSpeakerEmbeddingExtractorDim().
 * @return A newly allocated manager. Free it with
 *         EdgevoxOnnxDestroySpeakerEmbeddingManager().
 * @see EdgevoxOnnxDestroySpeakerEmbeddingManager
 */
EDGEVOX_ONNX_API const EdgevoxOnnxSpeakerEmbeddingManager *
EdgevoxOnnxCreateSpeakerEmbeddingManager(int32_t dim);
/**
 * @brief Destroy a speaker embedding manager.
 *
 * @param p A pointer returned by EdgevoxOnnxCreateSpeakerEmbeddingManager().
 * @see EdgevoxOnnxCreateSpeakerEmbeddingManager
 */
EDGEVOX_ONNX_API void EdgevoxOnnxDestroySpeakerEmbeddingManager(
    const EdgevoxOnnxSpeakerEmbeddingManager *p);
/**
 * @brief Add one enrollment embedding for a speaker.
 *
 * @param p A pointer returned by EdgevoxOnnxCreateSpeakerEmbeddingManager().
 * @param name Speaker name.
 * @param v Embedding vector with exactly `dim` elements.
 * @return 1 on success; 0 on error.
 */
EDGEVOX_ONNX_API int32_t
EdgevoxOnnxSpeakerEmbeddingManagerAdd(const EdgevoxOnnxSpeakerEmbeddingManager *p,
                                     const char *name, const float *v);
/**
 * @brief Add multiple enrollment embeddings packed in one flat array.
 *
 * The input contains @p n embeddings laid out consecutively, so the total
 * array length must be `n * dim`.
 *
 * @param p A pointer returned by EdgevoxOnnxCreateSpeakerEmbeddingManager().
 * @param name Speaker name.
 * @param v Flattened embedding array.
 * @param n Number of embeddings in @p v.
 * @return 1 on success; 0 on error.
 */
EDGEVOX_ONNX_API int32_t EdgevoxOnnxSpeakerEmbeddingManagerAddListFlattened(
    const EdgevoxOnnxSpeakerEmbeddingManager *p, const char *name,
    const float *v, int32_t n);
/**
 * @brief Remove a speaker from the manager.
 *
 * @param p A pointer returned by EdgevoxOnnxCreateSpeakerEmbeddingManager().
 * @param name Speaker name to remove.
 * @return 1 if removed; otherwise 0. Returns 0 if the speaker does not exist.
 */
EDGEVOX_ONNX_API int32_t EdgevoxOnnxSpeakerEmbeddingManagerRemove(
    const EdgevoxOnnxSpeakerEmbeddingManager *p, const char *name);
/**
 * @brief Search for the best matching enrolled speaker.
 *
 * @param p A pointer returned by EdgevoxOnnxCreateSpeakerEmbeddingManager().
 * @param v Query embedding vector.
 * @param threshold Minimum similarity threshold in the range [0, 1].
 * @return A newly allocated speaker name on match, or NULL if no speaker
 *         passes the threshold. Free the returned name with
 *         EdgevoxOnnxSpeakerEmbeddingManagerFreeSearch().
 */
EDGEVOX_ONNX_API const char *EdgevoxOnnxSpeakerEmbeddingManagerSearch(
    const EdgevoxOnnxSpeakerEmbeddingManager *p, const float *v,
    float threshold);
/**
 * @brief Free a string returned by EdgevoxOnnxSpeakerEmbeddingManagerSearch().
 *
 * @param name A pointer returned by
 *             EdgevoxOnnxSpeakerEmbeddingManagerSearch().
 */
EDGEVOX_ONNX_API void EdgevoxOnnxSpeakerEmbeddingManagerFreeSearch(
    const char *name);
/**
 * @brief Verify whether a query embedding matches a named speaker.
 *
 * @param p A pointer returned by EdgevoxOnnxCreateSpeakerEmbeddingManager().
 * @param name Speaker name to compare against.
 * @param v Query embedding vector.
 * @param threshold Minimum similarity threshold in the range [0, 1].
 * @return 1 if the speaker matches; otherwise 0.
 */
EDGEVOX_ONNX_API int32_t EdgevoxOnnxSpeakerEmbeddingManagerVerify(
    const EdgevoxOnnxSpeakerEmbeddingManager *p, const char *name,
    const float *v, float threshold);
/**
 * @brief Check whether a speaker is enrolled.
 *
 * @param p A pointer returned by EdgevoxOnnxCreateSpeakerEmbeddingManager().
 * @param name Speaker name.
 * @return 1 if the speaker exists; otherwise 0.
 */
EDGEVOX_ONNX_API int32_t EdgevoxOnnxSpeakerEmbeddingManagerContains(
    const EdgevoxOnnxSpeakerEmbeddingManager *p, const char *name);
/**
 * @brief Return the number of enrolled speakers.
 *
 * @param p A pointer returned by EdgevoxOnnxCreateSpeakerEmbeddingManager().
 * @return Number of enrolled speakers.
 */
EDGEVOX_ONNX_API int32_t EdgevoxOnnxSpeakerEmbeddingManagerNumSpeakers(
    const EdgevoxOnnxSpeakerEmbeddingManager *p);
/**
 * @brief Return all enrolled speaker names.
 *
 * The returned array is NULL-terminated. If no speakers are enrolled, the
 * returned array still exists and its first element is NULL.
 *
 * @param p A pointer returned by EdgevoxOnnxCreateSpeakerEmbeddingManager().
 * @return A newly allocated NULL-terminated array of speaker names. Free it
 *         with EdgevoxOnnxSpeakerEmbeddingManagerFreeAllSpeakers().
 */
EDGEVOX_ONNX_API const char *const *
EdgevoxOnnxSpeakerEmbeddingManagerGetAllSpeakers(
    const EdgevoxOnnxSpeakerEmbeddingManager *p);
/**
 * @brief Free an array returned by
 * EdgevoxOnnxSpeakerEmbeddingManagerGetAllSpeakers().
 *
 * @param names A pointer returned by
 * EdgevoxOnnxSpeakerEmbeddingManagerGetAllSpeakers().
 */
EDGEVOX_ONNX_API void EdgevoxOnnxSpeakerEmbeddingManagerFreeAllSpeakers(
    const char *const *names);