flutter/edgevox_onnx/lib/src/edgevox_onnx_bindings.dart


    circularBufferSize ??= dynamicLibrary
        .lookup<NativeFunction<EdgevoxOnnxCircularBufferSizeNative>>(
          'EdgevoxOnnxCircularBufferSize',
        )
        .asFunction();

    circularBufferHead ??= dynamicLibrary
        .lookup<NativeFunction<EdgevoxOnnxCircularBufferHeadNative>>(
          'EdgevoxOnnxCircularBufferHead',
        )
        .asFunction();

    circularBufferReset ??= dynamicLibrary
        .lookup<NativeFunction<EdgevoxOnnxCircularBufferResetNative>>(
          'EdgevoxOnnxCircularBufferReset',
        )
        .asFunction();

    createSpeakerEmbeddingExtractor ??= dynamicLibrary
        .lookup<
          NativeFunction<EdgevoxOnnxCreateSpeakerEmbeddingExtractorNative>
        >('EdgevoxOnnxCreateSpeakerEmbeddingExtractor')
        .asFunction();

    destroySpeakerEmbeddingExtractor ??= dynamicLibrary
        .lookup<
          NativeFunction<EdgevoxOnnxDestroySpeakerEmbeddingExtractorNative>
        >('EdgevoxOnnxDestroySpeakerEmbeddingExtractor')
        .asFunction();

    speakerEmbeddingExtractorDim ??= dynamicLibrary
        .lookup<NativeFunction<EdgevoxOnnxSpeakerEmbeddingExtractorDimNative>>(
          'EdgevoxOnnxSpeakerEmbeddingExtractorDim',
        )
        .asFunction();

    speakerEmbeddingExtractorCreateStream ??= dynamicLibrary
        .lookup<
          NativeFunction<EdgevoxOnnxSpeakerEmbeddingExtractorCreateStreamNative>
        >('EdgevoxOnnxSpeakerEmbeddingExtractorCreateStream')
        .asFunction();

    speakerEmbeddingExtractorComputeEmbedding ??= dynamicLibrary
        .lookup<
          NativeFunction<
            EdgevoxOnnxSpeakerEmbeddingExtractorComputeEmbeddingNative
          >
        >('EdgevoxOnnxSpeakerEmbeddingExtractorComputeEmbedding')
        .asFunction();

    speakerEmbeddingExtractorDestroyEmbedding ??= dynamicLibrary
        .lookup<
          NativeFunction<
            EdgevoxOnnxSpeakerEmbeddingExtractorDestroyEmbeddingNative
          >
        >('EdgevoxOnnxSpeakerEmbeddingExtractorDestroyEmbedding')
        .asFunction();

    destroyOnlineStream ??= dynamicLibrary
        .lookup<NativeFunction<EdgevoxOnnxDestroyOnlineStreamNative>>(
          'EdgevoxOnnxDestroyOnlineStream',
        )
        .asFunction();

    onlineStreamAcceptWaveform ??= dynamicLibrary
        .lookup<NativeFunction<OnlineStreamAcceptWaveformNative>>(
          'EdgevoxOnnxOnlineStreamAcceptWaveform',
        )
        .asFunction();

    onlineStreamInputFinished ??= dynamicLibrary
        .lookup<NativeFunction<OnlineStreamInputFinishedNative>>(
          'EdgevoxOnnxOnlineStreamInputFinished',
        )
        .asFunction();

    onlineStreamSetOption ??= dynamicLibrary
        .lookup<NativeFunction<OnlineStreamSetOptionNative>>(
          'EdgevoxOnnxOnlineStreamSetOption',
        )
        .asFunction();

    speakerEmbeddingExtractorIsReady ??= dynamicLibrary
        .lookup<
          NativeFunction<EdgevoxOnnxSpeakerEmbeddingExtractorIsReadyNative>
        >('EdgevoxOnnxSpeakerEmbeddingExtractorIsReady')
        .asFunction();

    createSpeakerEmbeddingManager ??= dynamicLibrary
        .lookup<NativeFunction<EdgevoxOnnxCreateSpeakerEmbeddingManagerNative>>(
          'EdgevoxOnnxCreateSpeakerEmbeddingManager',
        )
        .asFunction();

    destroySpeakerEmbeddingManager ??= dynamicLibrary
        .lookup<NativeFunction<EdgevoxOnnxDestroySpeakerEmbeddingManagerNative>>(
          'EdgevoxOnnxDestroySpeakerEmbeddingManager',
        )
        .asFunction();

    speakerEmbeddingManagerAdd ??= dynamicLibrary
        .lookup<NativeFunction<EdgevoxOnnxSpeakerEmbeddingManagerAddNative>>(
          'EdgevoxOnnxSpeakerEmbeddingManagerAdd',
        )
        .asFunction();

    speakerEmbeddingManagerAddListFlattened ??= dynamicLibrary
        .lookup<
          NativeFunction<
            EdgevoxOnnxSpeakerEmbeddingManagerAddListFlattenedNative
          >
        >('EdgevoxOnnxSpeakerEmbeddingManagerAddListFlattened')
        .asFunction();

    speakerEmbeddingManagerRemove ??= dynamicLibrary
        .lookup<NativeFunction<EdgevoxOnnxSpeakerEmbeddingManagerRemoveNative>>(
          'EdgevoxOnnxSpeakerEmbeddingManagerRemove',
        )
        .asFunction();

    speakerEmbeddingManagerContains ??= dynamicLibrary
        .lookup<
          NativeFunction<EdgevoxOnnxSpeakerEmbeddingManagerContainsNative>
        >('EdgevoxOnnxSpeakerEmbeddingManagerContains')
        .asFunction();

    speakerEmbeddingManagerSearch ??= dynamicLibrary
        .lookup<NativeFunction<EdgevoxOnnxSpeakerEmbeddingManagerSearchNative>>(
          'EdgevoxOnnxSpeakerEmbeddingManagerSearch',
        )
        .asFunction();

    speakerEmbeddingManagerFreeSearch ??= dynamicLibrary
        .lookup<
          NativeFunction<EdgevoxOnnxSpeakerEmbeddingManagerFreeSearchNative>
        >('EdgevoxOnnxSpeakerEmbeddingManagerFreeSearch')
        .asFunction();

    speakerEmbeddingManagerNumSpeakers ??= dynamicLibrary
        .lookup<
          NativeFunction<EdgevoxOnnxSpeakerEmbeddingManagerNumSpeakersNative>
        >('EdgevoxOnnxSpeakerEmbeddingManagerNumSpeakers')
        .asFunction();

    speakerEmbeddingManagerVerify ??= dynamicLibrary
        .lookup<NativeFunction<EdgevoxOnnxSpeakerEmbeddingManagerVerifyNative>>(
          'EdgevoxOnnxSpeakerEmbeddingManagerVerify',
        )
        .asFunction();

    speakerEmbeddingManagerGetAllSpeakers ??= dynamicLibrary
        .lookup<
          NativeFunction<EdgevoxOnnxSpeakerEmbeddingManagerGetAllSpeakersNative>
        >('EdgevoxOnnxSpeakerEmbeddingManagerGetAllSpeakers')
        .asFunction();

    speakerEmbeddingManagerFreeAllSpeakers ??= dynamicLibrary
        .lookup<
          NativeFunction<EdgevoxOnnxSpeakerEmbeddingManagerFreeAllSpeakersNative>
        >('EdgevoxOnnxSpeakerEmbeddingManagerFreeAllSpeakers')
        .asFunction();

    readWave ??= dynamicLibrary
        .lookup<NativeFunction<EdgevoxOnnxReadWaveNative>>('EdgevoxOnnxReadWave')
        .asFunction();

    writeWave ??= dynamicLibrary
        .lookup<NativeFunction<EdgevoxOnnxWriteWaveNative>>(
          'EdgevoxOnnxWriteWave',
        )
        .asFunction();

    freeWave ??= dynamicLibrary
        .lookup<NativeFunction<EdgevoxOnnxFreeWaveNative>>('EdgevoxOnnxFreeWave')
        .asFunction();

    getVersionStr ??= dynamicLibrary
        .lookup<NativeFunction<EdgevoxOnnxGetVersionStrNative>>(
          'EdgevoxOnnxGetVersionStr',
        )
        .asFunction();

    getGitSha1 ??= dynamicLibrary
        .lookup<NativeFunction<EdgevoxOnnxGetGitSha1Native>>(
          'EdgevoxOnnxGetGitSha1',
        )
        .asFunction();

    getGitDate ??= dynamicLibrary
        .lookup<NativeFunction<EdgevoxOnnxGetGitDateNative>>(
          'EdgevoxOnnxGetGitDate',
        )
        .asFunction();
  }
}
